# -QtWidgetsApplication1

./: CMakeLists.txt  QtWidgetsApplication1.sln  README.md
QtWidgetsApplication1/: CMakeLists.txt  Makefile  QtWidgetsApplication1.vcxproj  QtWidgetsApplication1.vcxproj.filters  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h
QtWidgetsApplication1/QtWidgetsApplication1_autogen/: moc_predefs.h  mocs_compilation.cpp
QtWidgetsApplication1/QtWidgetsApplication1_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_settingsdialog.cpp
QtWidgetsApplication1/QtWidgetsApplication1_autogen/include/: ui_mainwindow.h  ui_settingsdialog.h
